overflow corrected

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,8 @@
 }
 
 body {
+  width: 100vw;
+  overflow-x: hidden;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
